# np-har

./: pyproject.toml
notebooks/: train.ipynb
src/np_har/: __init__.py  np_har.py
src/np_har/encoder/: tiny_har.py
src/np_har/training/: train_simple.py
