[project]
name = "np-har"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxbrzr", email = "maximilian.burzer@kit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
