[project]
name = "np-har"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maxbrzr", email = "maximilian.burzer@kit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "har-datasets",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
har-datasets = { git = "https://github.com/maxbrzr/har-datasets.git" }
